--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^17.1.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mariadb": "^3.4.4",
     "morgan": "~1.9.1"
   }
 }
