--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -17,7 +18,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
