--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-redis": "^9.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,7 +16,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mariadb": "^3.4.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
