--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "morgan": "~1.9.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
     "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
