--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "connect-redis": "^9.0.0",
+    "@aws-sdk/client-s3": "^3.846.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -22,8 +23,8 @@
     "morgan": "~1.9.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
-    "redis": "^5.6.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
