--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
