--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.4",
+    "moment-timezone": "^0.6.0",
     "morgan": "~1.9.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
